# nIRC

./: .gitignore  deploy  exampleBot.py  pyproject.toml  todo_docs.md  todo_feat.md
Docs/: index.html
cogs/: dev.py  test.py
exampleCogs/: ollama.py  roles.py  showcase.py
nIRC/: __init__.py  irc.py  logMessages.py  logger.py  permissions.py  register.py
nIRC/types/: channel.py  context.py  dcc.py  member.py
