[build-system]

requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nIRC"
version = "1.0.3"
authors = [
{ name="NekoMimiOfficial", email="nekomimi@tilde.team" },
]
description = "an asynchronous IRC bot framework"
readme = "README.md"
requires-python = ">=3.8"
license = "LicenseRef-Nekocense-1.0"
license-files = ["LICENSE"]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"Topic :: Utilities",
]
keywords = ["irc", "python", "library", "asynchronous"]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["nIRC*"]
